--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-big-calendar": "^0.28.1",
+    "react-datetime-picker": "^3.0.4",
     "react-dom": "^17.0.1",
-    "react-scripts": "3.4.4"
+    "react-modal": "^3.11.2",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.4",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "sweetalert2": "^10.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +39,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
+    "redux-mock-store": "^1.5.4"
   }
 }
